# shopify-challenge

./: .gitignore  README.md  requirements.txt  setup.cfg
app/: __init__.py  constants.py  db.py  errors.py
app/models/: __init__.py  folder.py  image.py
app/routes/: delete.py  get.py  upload.py
tests/unit/app/: conftest.py
tests/unit/app/models/: folder_test.py  image_test.py
tests/unit/app/routes/: delete_test.py  upload_test.py
