[metadata]
name = app
version = 1.0.0
url = http://127.0.0.1:5000/
license = BSD-3-Clause
maintainer = Jake Goodman
maintainer_email = jakewgoodman@gmail.com
description = My submission for Shopify's Winter Intern Challenge
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    app